tests/invalid/missing_det_decls.m
:- module missing_det_decls.
:- interface.

:- pred exp1.
:- mode exp1.

:- pred exp2(int).
:- mode exp2(out).

:- implementation.

:- pred loc1.
:- mode loc1.

:- pred loc2(int).
:- mode loc2(out).

